fix(styles): Fix menu collapse icon

--- a/app/styles/less/sf-icons.less
+++ b/app/styles/less/sf-icons.less
@@ -6,10 +6,14 @@ background-position: -421px -85px;
 background-image: url("../../images/unplug.png");
 }
 .icon-collapse {
-height: 15px;
-width: 17px;
-background: url("../../images/sf-menu-collapse.png") 0 0;
+    height: 15px;
+    width: 16px;
+    background: url("../../images/sf-menu-collapse.png") 0 -15px;
+    &.icon-white {
+        background-position: 0 0;
+    }
 }
+
 .icon-list-view, .icon-kanban-view {
 width: 20px;
 height: 19px;
